--- a/index.html
+++ b/index.html
@@ -355,6 +355,6 @@ tion in some form, by </p>
     <script src="js/owl.carousel.js"></script>
     <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 	<!-- aydio -->
-	<script src="https://cdn.jsdelivr.net/gh/cameronball/aydio@main/aydio.js?v=1"></script>
+	<script src="js/aydio.js"></script>
 </body>
 </html>
